--- a/css/mobile/m-bp2.css
+++ b/css/mobile/m-bp2.css
@@ -159,21 +159,20 @@ main {
     /*width: 60px;*/
     /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
     /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
-    width: 45px;
+    width: 130px;
     margin: 0 0 0 0;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 0 20px 20px 0;
     border: 0px solid;
     background-color: #0065FC;
     font-size: 16px;
-    font-weight: initial;
+    font-weight: bold;
     color: #ffffff;
     flex-shrink: 0;
 }
 
 /* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
-    font-family: fontAwesome;
-    content: "\f002";
+    content:"Rechercher";
 }
 
 
@@ -232,7 +231,7 @@ main {
     background-color: #DEEBFF;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     color: #0065FC;
-    font-size: 14px;
+    font-size: 17px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -249,8 +248,8 @@ main {
 
 /* Intitulé filtre */
 .filters span {
-    padding: 0 15px 0 8px;
-    font-size: 14px;
+    padding: 0 10px 0 5px;
+    font-size: 17px;
 }
 
 /* Dimensions de la div avec logo + phrase */
@@ -313,7 +312,7 @@ main {
     margin: 8% 0 0 0;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
@@ -479,19 +478,20 @@ main {
 /* Div avec les cards activités */
 .activities-list {
     height: initial;
-    margin: 0 0 0 0;
+    margin: 40px 0 0 0;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: initial;
+    align-items: center;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-    width: 49%;
-    height: 402px;
-    margin: 0 0 0 0;
+    width: 100%;
+    max-width: 282px;
+    height: 100%;
+    margin: 0 0 8% 0;
     border-radius: 30px 30px 30px 30px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
@@ -547,7 +547,8 @@ main {
 /* Miniature card activité */
 .activity img {
     width: 100%;
-    height: initial;
+    max-width: 282px;
+    height: 108px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
     flex-grow: 1;
@@ -555,7 +556,7 @@ main {
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 5% 0 5% 5%;
+    margin: 7% 0 5% 6%;
 }
 
 
