--- a/css/mobile/m-bp3.css
+++ b/css/mobile/m-bp3.css
@@ -2,18 +2,18 @@
 
 /* "Trouvez votre hébergement..." */
 h1 {
-    font-size: 43px;
+    font-size: 21px;
 }
 
 /* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
 h2 {
-    font-size: 39px;
+    font-size: 20px;
 
 }
 
 /* Pour chaque titre de card */
 h3 {
-    font-size: 33px;
+    font-size: 14px;
 }
 
 ul {
@@ -33,7 +33,7 @@ body {
 
 /* Prix hébergement */
 .price {
-    font-size: 29px;
+    font-size: 13px;
 }
 
 /* Quand un prix est bas */
@@ -50,52 +50,53 @@ body {
 }
 
 .fa-star {
-    font-size: 26px;
+    font-size: 11px;
 }
 
 /* || HEADER */
 
 header {
-    width: 100%;
-    margin: 0 0 0 0;
-    flex-direction: column;
+    width: 93%;
+    margin: 0 auto 0 auto;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
-    align-items: center;
+    align-items: initial;
 }
 
 /* Logo */
 header img {
-    width: 191px;
-    height: 90px;
-    margin: 30px 0 0 7%;
+    width: 95px;
+    height: 45px;
+    margin: 45px 0 0 12%;
 }
 
 nav {
-    width: 100%;
-    margin: 50px 0 0 0;
+    width: initial;
+    margin: 0 0 0 0;
 }
 
 header ul {
     margin: 0;
     padding: 0;
-    font-size: 32px;
-    text-align: center;
+    font-size: 16px;
+    text-align: initial;
     display: flex;
-    justify-content: initial;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-    align-items: initial; /* On aligne en bas */
+    justify-content: space-around;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+    align-items: baseline; /* On aligne en bas */
 }
 
 header li {
-    width: 50%;
-    padding: 0 0 20px 0;    /* Permet d'avoir la bordure tout en haut */
-    border-top: 0;  /* Evite le décalage du texte lors du hover */
-    border-bottom: 6px solid #F2F2F2;
+    width: initial;
+    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
+    border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
+    border-bottom: initial;
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-    border-top: 0;
-    border-bottom: 6px solid #0065FC;
+    border-top: 2px solid #0065FC;
+    border-bottom: initial;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
@@ -106,7 +107,7 @@ header li:hover a {
 
 /* || MAIN */
 main {
-    width: auto;
+    width: 100%;
     margin: 4% auto 5% auto;
     flex: 1 0 auto;
 }
@@ -118,7 +119,7 @@ main {
 
 /* "En plein centre ville..." */
 .search-filters p {
-    font-size: 31px;
+    font-size: 16px;
     font-weight: normal;
 }
 
@@ -126,17 +127,17 @@ main {
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-    margin: 50px 0 0 0;
+    margin: 30px 0 0 0;
     display: flex;
 }
 
 .fa-location-dot {
-    height: 100px;
-    width: 15%;
-    border-top-left-radius: 30px 30px;
-    border-bottom-left-radius: 30px 30px;
+    height: 45px;
+    width: 45px;
+    border-top-left-radius: 15px 15px;
+    border-bottom-left-radius: 15px 15px;
     background-color: #F2F2F2;
-    font-size: 34px;
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -145,36 +146,34 @@ main {
 
 /* Champ de recherche */
 .search {
-    height: 100px;
-    width: initial;
+    height: 45px;
+    min-width: 180px;
     border: 0px;
-    border-top: 2px solid #F2F2F2;
-    border-bottom: 2px solid #F2F2F2;
-    padding: 0 0 0 3%; /* On se décale un peu de la gauche */
-    font-size: 34px;
+    border-top: 1px solid #F2F2F2;
+    border-bottom: 1px solid #F2F2F2;
+    padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+    font-size: 16px;
     font-weight: bold;
-    flex-grow: 1;
 }
 
 .search-button {
     /*width: 60px;*/
     /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
     /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
-    width: 15%;
+    width: 130px;
     margin: 0 0 0 0;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 0 20px 20px 0;
     border: 0px solid;
     background-color: #0065FC;
-    font-size: 34px;
-    font-weight: initial;
+    font-size: 16px;
+    font-weight: bold;
     color: #ffffff;
     flex-shrink: 0;
 }
 
 /* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
-    font-family: fontAwesome;
-    content: "\f002";
+    content:"Rechercher";
 }
 
 
@@ -195,7 +194,7 @@ main {
 }
 
 .filters-list {
-    margin: 40px 0 0 0;
+    margin: 30px 0 0 0;
     display: flex;    /* Permettre à la phrase de revenir à la ligne */
     flex-wrap: wrap;
     align-items: center;
@@ -204,7 +203,7 @@ main {
 /* "Filtres" */
 .filters-list span {
     font-weight: bold;  /* "Filtres" en gras */
-    font-size: 34px;
+    font-size: 17px;
 }
 
 .filters-list span:first-child {
@@ -214,8 +213,8 @@ main {
 
 /* Chaque filtre */
 .filters {
-    margin: 15px 20px 15px 0;
-    border: 4px solid #d9d9d9;
+    margin: 5px 1% 10px 0;
+    border: 2px solid #d9d9d9;
     border-left: 0px;
     border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
     background-color: #ffffff;
@@ -228,12 +227,12 @@ main {
 
 /* Logo filtre */
 .filters .fa-solid {
-    width: 90px;
-    height: 90px;
+    width: 40px;
+    height: 40px;
     background-color: #DEEBFF;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     color: #0065FC;
-    font-size: 31px;
+    font-size: 17px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -250,23 +249,23 @@ main {
 
 /* Intitulé filtre */
 .filters span {
-    padding: 0 35px 0 20px;
-    font-size: 31px;
+    padding: 0 10px 0 5px;
+    font-size: 17px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
-    margin: 40px 0 0 0;
+    margin: 20px 0 0 0;
     display: flex;
     align-items: initial;
 }
 
 .fa-info {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     border-radius: 100px 100px 100px 100px; /* Cercle */
     border: 1px solid #d9d9d9;
-    font-size: 22px;
+    font-size: 12px;
     color: #0065FC;
     display: flex;
     justify-content: center;
@@ -281,7 +280,7 @@ main {
 
 /* Div hébergements et populaires */
 .lodgings-popular {
-    margin: 60px 0 0 0;
+    margin: 30px 0 0 0;
     display: flex;
     flex-direction: column;
     justify-content: initial;
@@ -307,23 +306,25 @@ main {
 /* "Hébergements à Marseille" */
 #lodgings h2 {
     width: 100%;
-    margin: 50px 0 7px 0;
+    margin: 40px 0 7px 0;
 }
 
 .lodging-list {
     margin: 8% 0 0 0;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
     width: 100%;
+    max-width: 282px;
     margin: 0 0 5% 0;
-    padding: 10px;
-    border-radius: 30px 30px 30px 30px;
+    padding: 5px;
+    border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
     background-color: #ffffff;
 }
@@ -337,7 +338,7 @@ main {
 }
 
 .lodging-image {
-    height: 219px;
+    height: 92px;
 }
 
 /* Miniature de card hébergement */
@@ -370,8 +371,8 @@ main {
 /* "Afficher plus" */
 .show-more {
     width: 100%;
-    margin: 30px 0 5% 0;
-    font-size: 36px;
+    margin: 20px 0 5% 0;
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -388,14 +389,14 @@ main {
 
 /* "Les plus populaires" */
 .most-popular h2 {
-    margin: 50px 0 7px 0;
+    margin: 30px 0 7px 0;
     display: inline-block;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-    margin: 50px 0 7px 0;
-    font-size: 39px;
+    margin: 30px 0 7px 0;
+    font-size: 20px;
     float: right;
 }
 
@@ -405,13 +406,16 @@ main {
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
+    width: 100%;
+    max-width: 282px;
     margin: 0 0 4% 0;
-    padding: 10px;
-    border-radius: 30px 30px 30px 30px;
+    padding: 5px;
+    border-radius: 20px 20px 20px 20px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
@@ -423,8 +427,8 @@ main {
 }
 
 .popular-image {
-    width: 235px;
-    height: 260px;
+    width: 120px;
+    height: 130px;
 }
 
 /* Miniature card populaire */
@@ -469,68 +473,74 @@ main {
 
 /* "Activités à Marseille" */
 #activities h2 {
-    margin: 50px 0 7px 0;
+    margin: 20px 0 7px 0;
 }
 
 /* Div avec les cards activités */
 .activities-list {
-    height: initial;
-    margin: 50px 0 0 0;
+    height: 900px;
+    margin: 0 0 0 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: normal;
+    align-content: space-between;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-    width: 100%;
-    height: 100%;
-    margin: 0 0 8% 0;
-    border-radius: 30px 30px 30px 30px;
+    width: 49%;
+    height: 435px;
+    margin: 0 0 0 0;
+    border-radius: 20px 20px 20px 20px;
     background-color: #ffffff;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-    height: initial;
+    order: 3;
+    height: 26%;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-    height: initial;
+    order: 4;
+    height: 18%;
 }
+
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-    height: initial;
+    order: 5;
+    height: 22%;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-    height: initial;
+    order: 6;
+    height: 23%;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-    height: 254px;
+    height: 76%;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-    height: 254px;
+    height: 65%;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-    height: 254px;
+    height: 71%;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-    height: 254px;
+    height: 73%;
 }
 
 /* Card activité */
@@ -543,15 +553,14 @@ main {
 /* Miniature card activité */
 .activity img {
     width: 100%;
-    height: 254px;
+    height: 380px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
-    flex-grow: 1;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 7% 0 5% 6%;
+    margin: 7% 0 7% 7%;
 }
 
 
@@ -565,30 +574,30 @@ footer {
 .footer-list {
     width: 90%;
     margin: 0 auto 0 auto;
-    padding: 10% 2% 10% 4%;
+    padding: 3% 2% 4% 2%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-    margin: 0 0 20px 0;
-    font-size: 32px;
+    margin: 0 0 14px 0;
+    font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
-    margin: 0 0 30px 0;
-    font-size: 36px;
+    margin: 0 0 22px 0;
+    font-size: 17px;
     font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin: 0 0 55px 0;
+    margin: 0 17% 0 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin: 0 0 55px 0;
+    margin: 0 22% 0 0;
 }
