--- a/css/mobile/m-bp3.css
+++ b/css/mobile/m-bp3.css
@@ -577,27 +577,28 @@ footer {
     padding: 3% 2% 4% 2%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-    margin: 0 0 14px 0;
+    margin: 0 0 13px 0;
     font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
-    margin: 0 0 22px 0;
+    margin: 0 0 20px 0;
     font-size: 17px;
     font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin: 0 17% 0 0;
+    margin: 0 0 0 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin: 0 22% 0 0;
+    margin: 0 0 0 0;
 }
