--- a/css/mobile/m-bp3.css
+++ b/css/mobile/m-bp3.css
@@ -53,6 +53,7 @@ body {
     font-size: 11px;
 }
 
+
 /* || HEADER */
 
 header {
@@ -66,9 +67,9 @@ header {
 
 /* Logo */
 header img {
-    width: 95px;
+    width: 95.5px;
     height: 45px;
-    margin: 45px 0 0 12%;
+    margin: 45px 0 0 6%;
 }
 
 nav {
@@ -132,10 +133,9 @@ main {
 }
 
 .fa-location-dot {
-    height: 45px;
-    width: 45px;
-    border-top-left-radius: 15px 15px;
-    border-bottom-left-radius: 15px 15px;
+    height: 50px;
+    width: 50px;
+    border-radius: 15px 0 0 15px;
     background-color: #F2F2F2;
     font-size: 16px;
     display: flex;
@@ -146,8 +146,8 @@ main {
 
 /* Champ de recherche */
 .search {
-    height: 45px;
     min-width: 180px;
+    height: 50px;
     border: 0px;
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
@@ -157,9 +157,6 @@ main {
 }
 
 .search-button {
-    /*width: 60px;*/
-    /*border-top-right-radius: 20px 20px;*/ /* On arrondit l'angle supérieur droit */
-    /*border-bottom-right-radius: 20px 20px;*/  /* On arrondit l'angle inférieur droit */
     width: 130px;
     margin: 0 0 0 0;
     border-radius: 0 20px 20px 0;
@@ -171,18 +168,9 @@ main {
     flex-shrink: 0;
 }
 
-/* Changement de "Rechercher" en icone Loupe pour vue mobile */
 .search-button:before {
     content:"Rechercher";
 }
-
-
-/* Changement de "Rechercher" en icone Loupe pour vue mobile
-#search-button::before {
-    font-family: fontAwesome;
-    content: "\f002";
-}
-*/
 
 
 /* || FILTRES ET RESULTATS */
@@ -294,6 +282,7 @@ main {
     order: 1;
 }
 
+
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
@@ -322,7 +311,7 @@ main {
 .lodging-list a {
     width: 100%;
     max-width: 282px;
-    margin: 0 0 5% 0;
+    margin: 0 0 6% 0;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
@@ -413,7 +402,7 @@ main {
 .popular-list a {
     width: 100%;
     max-width: 282px;
-    margin: 0 0 4% 0;
+    margin: 0 0 5% 0;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     background-color: #ffffff;
