--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ main {
     border-top-left-radius: 20px 20px;
     border-bottom-left-radius: 20px 20px;
     background-color: #F2F2F2;
+    font-size: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -146,6 +147,7 @@ main {
     border-top: 1px solid #F2F2F2;
     border-bottom: 1px solid #F2F2F2;
     padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+    font-size: 16px;
     font-weight: bold;
 }
 
@@ -160,21 +162,10 @@ main {
     color: #ffffff;
 }
 
-/* 
-   On insère "Rechercher" dans le bouton de recherche
-   Nécessaire pour pouvoir changer le texte en icone en version mobile
-*/
 .search-button:before {
     content:"Rechercher";
 }
 
-
-/* Changement de "Rechercher" en icone Loupe pour vue mobile
-#search-button::before {
-    font-family: fontAwesome;
-    content: "\f002";
-}
-*/
 
 
 /* || FILTRES ET RESULTATS */
