--- a/css/mobile/m-bp3.css
+++ b/css/mobile/m-bp3.css
@@ -303,7 +303,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 }
 
@@ -311,7 +311,7 @@ main {
 .lodging-list a {
     width: 100%;
     max-width: 244px;
-    margin: 0 0 6% 0;
+    margin: 0 2% 6% 2%;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
