--- a/css/mobile/m-bp4.css
+++ b/css/mobile/m-bp4.css
@@ -402,7 +402,7 @@ main {
 .popular-list a {
     width: 100%;
     max-width: 334px;
-    margin: 0 0 5% 0;
+    margin: 0 0 4% 0;
     padding: 5px;
     border-radius: 20px 20px 20px 20px;
     background-color: #ffffff;
@@ -412,11 +412,12 @@ main {
 /* Card populaire */
 .popular {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 .popular-image {
-    width: 120px;
+    width: initial;
     height: 130px;
 }
 
@@ -424,33 +425,33 @@ main {
 .popular img {
     width: 100%;
     height: 100%;
-    border-radius: 20px 0 0 20px;
+    border-radius: 20px 20px 0 0 ;
     object-fit: cover;
 }
 
 /* Légende card populaire */
 .popular figcaption {
-    padding: 0 0 0 6%;
+    padding: 0 0 0 4%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    flex: 1;
+    flex: 0;
 }
 
 .popular h3 {
-    width: 85%;
-    padding: 6% 0 0 0;
+    width: initial;
+    padding: 4% 0 0 0;
 }
 
 /* Prix populaire */
 .popular .price {
-    padding: 5% 0 0 0;
-    flex-grow: 1;
+    padding: 1% 0 0 0;
+    flex-grow: 0;
 }
 
 /* Note populaire */
 .popular .rating {
-    padding: 3% 0 6% 0;
+    padding: 3% 0 3% 0;
 }
 
 
